metrique/tests/ui/fail/value_enum_with_lifetime.rs
use metrique::unit_of_work::metrics;

#[metrics(value(string))]
enum ValueEnumWithLifetime<'a> {
    Foo,
    Bar,
}

fn main() {}
